2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* platform.hh (get_homedir): New function.
	* {win32,unix}/fs.cc (get_homedir): Expose.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* Minor compile fixes.
	
2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* platform.hh (tilde_expand): New function.
	* win32/fs.cc, unix/fs.cc: Implement it.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Many more fixes.  Now compiles with and without unit
	tests.
	
2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Lots of compile fixes for unit tests.
	Add a test for access_tracker.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Many fixes.  Now compiles.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (system_path): Implement.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (fully_normalized_path): Use find_first_of.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (find_and_go_to_working_copy, save_initial_path) 
	(go_to_working_copy): Use new checked structure.
	(operator <<): Make sure we can log our access_tracked values
	without marking them as used.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (struct access_tracker): Add invariant checking on
	lifetime usage of path roots.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (any_path::operator =): return *this.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh}: More fixes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh}: Reorganize a bit.  Implement file_path and
	bookkeeping_path.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (file_path): Implement basic constructor.
	Misc compile fixes.
	Add single-character names to tests.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (go_to_working_copy): New function.  Implement.
	* app_state.cc (create_working_copy): Adjust accordingly.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (find_and_go_to_working_copy): Implement.